# olim

./: .dockerignore  .env.template  .flaskenv  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.remote-workers.yml  docker-compose.workers-only.yml  docker-compose.yml  elasticserach_testes.ipynb  entrypoint.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_server.py  schema.sql  teste_elastic_serach.ipynb  upload_data.py
active_learning/: __init__.py  public_api.py  server.py  utils.py
active_learning/active/: __init__.py  policies.py
active_learning/bandits/: __init__.py
active_learning/models/: __init__.py  conformal.py  keras_classifiers.py  tfidf_sklearn.py
data/: README.md
docs/: index.md
docs/api_reference/: active_learning.md  labels.md
docs/getting_started/: installation.md  search.md  usage.md
docs/tutorials/: data_formatting.md  labeling.md
docs/wiki/: active_learning.md
migrations/versions/: 036595491aee_create_sessions_table.py  0c02d3746739_added_projects_datasets_and_tasks_tables.py  11999b1fb8f6_add_sep_and_encoding_columns_to_datasets.py  24287f3ca93e_fixed_relations_added_user_session.py  69207104f4a6_add_label_type_and_label_settings_to_.py  7065dcc8ea90_merge_learning_tasks_and_datasets_sep_.py  714e414e5b06_added_language_and_active_learning_.py  7217cc881dbb_initial_migration.py  7a445fdba8d5_remove_ml_training_jobs_table_use_.py  a82bba690b03_add_learning_tasks_table.py  af8ef6d637cd_merge_api_key_and_learning_task_branches.py  b3c4d5e6f7a8_add_user_api_key.py  b3f1a2c4d5e6_add_labelentry_metadata_and_model_predictions.py  b607167a4dcb_add_priority_column_to_labels_table.py  bfb791bf358b_create_ml_models_management_tables.py  c1d7d0b1a729_added_label_training_data_columns.py  c4e8f1a2b3d5_add_learning_task_assigned_to.py  cd97c2bcac12_add_auto_labels_column_to_label_model.py  d2e8740f1dbf_add_queues_table_and_migrate_file_based_.py  d81ac9c15a59_add_learner_parameters_json_column_to_.py  ddc5988f684a_added_task_description.py  e12788d3b67d_add_global_settings_table.py  e8eca55db06c_added_user_language_column.py  f2a646872d44_added_labels_priority_column.py
olim/: __init__.py  active_learning.py  analytics.py  api_rest.py  auth.py  celery_app.py  cli.py  commands.py  database.py  db.py  entry.py  error_handlers.py  functions.py  hidden.py  issue.py  labels.py  ml_ui.py  patient.py  project.py  queue.py  search.py  settings.py  settings_routes.py  upload_data.py  upload_utils.py
olim/entry_types/: __init__.py  base.py  patient.py  pdf.py  registry.py  single_text.py  text_pdf_url.py
olim/entry_types/patient/: __init__.py  commands.py  constants.py  entry_class.py  extract.py  hidden.py  render.py  search.py  upload.py
olim/label_types/: __init__.py  check.py  free_text.py  multiple_choice.py  open_text.py  sim_nao.py  sim_nao_ns.py  yes_no.py  yes_no_idk.py  yes_no_unknown.py
olim/learner/: __init__.py  public_api.py  server.py  settings.py  utils.py
olim/learner/active/: __init__.py  policies.py
olim/learner/bandits/: __init__.py
olim/learner/eval/: metrics.py  radical_sintomas.py
olim/learner/models/: __init__.py  conformal.py  keras_classifiers.py  tfidf_sklearn.py
olim/learning_tasks/: __init__.py  base.py  entry_selector.py  states.py
olim/learning_tasks/configurations/: active_learning.json  active_learning_llm_cold_start.json  active_learning_manual_cold_start.json  active_learning_search_cold_start.json  example.json  form_example.json  labeling_queue.json  llm_ollama_automated.json  llm_ollama_interactive.json
olim/ml/: __init__.py  artifacts.py  metrics.py  models.py  orchestrator.py  prediction.py  registry.py
olim/ml/classifiers/: __init__.py  conformal.py
olim/ml/services/: __init__.py  model_service.py
olim/static/css/: input.css  output.css  styles.css
olim/static/js/: scripts.js
olim/tasks/: __init__.py  active_learning.py  learning_tasks.py  ml_training.py  upload_data.py
olim/templates/: account-settings.html  admin-settings.html  al-entry.html  al-list.html  analytics.html  base.html  base_refactor.html  create-queue.html  data-navigation.html  edit-password.html  entry.html  error.html  help.html  hidden.html  index.html  init-config.html  label-configurations.html  label-settings.html  label.html  labels-menu.html  labels.html  learning-tasks.html  login.html  patient.html  projects.html  queue.html  search.html  task-list.html  task.html  upload-data.html  upload-macro.html  users.html
olim/templates/_layouts/: error_modal.html  flash_messages.html  footer.html  scripts.html  sidebar.html
olim/templates/components/: confirmation-modal.html  entry-navigation.html  footer.html  queue-management.html  random-queue.html  scripts.html  search-results.html  setting-modal.html  sidebar.html  text-search.html
olim/templates/entry_types/: patient.html  pdf.html  single_text.html  text_pdf_url.html
olim/templates/label_types/: check.html  free_text.html  multiple_choice.html  sim_nao.html  sim_nao_ns.html  yes_no.html  yes_no_idk.html  yes_no_unknown.html
olim/templates/learning_tasks/: _progress_bar.html  active_learning_loop.html  al_label_select.html  cold_start_search_setup.html  label_entry.html  ollama_auto_label.html  ollama_model_config.html  ollama_queue_setup.html  queue_complete.html  queue_list.html  queue_setup.html  read_data.html  show_data.html  static_content.html
olim/templates/macros/: entry-load-form.html  entry_sources.html  highlights.html  labels-menu.html  new-user-form.html  ui_components.html  upload-form.html
olim/templates/models/: create.html  detail.html  list.html  predict.html
olim/utils/: al.py  entry.py  es.py  label.py  queues.py  settings.py  text.py
rotulador/: __init__.py  commands.py  functions.py  index.py  pacient.py  patient.py  search.py  settings.py
rotulador/static/css/: styles.css
rotulador/templates/: base.html  index.html  label.html  pacient.html  patient.html  search.html
scripts/: migrate_labels_to_ml.py
(+3 files in other folders)
