[project]
name = "olim"
version = "0.1.0"
description = "A simple labelling interface aimed to be used by personal without data science specific knowledge. Currently OLIM supports the labelling of patients from medical texts relative to that patient. In future versions we expect to expand the possibilities of the data shape."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery-types>=0.23.0",
    "celery[redis]>=5.5.1",
    "click==8.1.3",
    "elasticsearch==7.17.9",
    "flask==2.2.3",
    "flask-babel==4.0.0",
    "flask-migrate>=4.1.0",
    "flask-session==0.5.0",
    "flask-sqlalchemy==3.0.3",
    "gunicorn==21.2.0",
    "icecream>=2.1.4",
    "lightgbm>=4.6.0",
    "numpy>=2.1.0",
    "pandas==2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests==2.31.0",
    "scikit-learn>=1.6.1",
    "tqdm==4.65.0",
    "unidecode>=1.4.0",
    "werkzeug==2.2.3",
    "xgboost>=3.0.1",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.8",
    "pre-commit>=4.1.0",
    "pyright[nodejs]>=1.1.399",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

fix = true
show-fixes = true
output-format = "grouped"

# Excluir diretórios comumente ignorados
extend-exclude = [
    "migrations/*",
    "olim/learner/*"
]

# Seleção de regras - configuração extensiva baseada na documentação
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "RUF", # ruff-specific rules
    # "D",   # pydocstyle
    "ANN", # flake8-annotations
    # "S",   # flake8-bandit
    # "T",   # flake8-debugger
]


# Ignorar regras específicas que podem ser muito restritivas
lint.ignore = [
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "ANN001", # Missing type annotation for self in method
    "ANN002",  # Missing type annotation for cls in classmethod
    "ANN003"  # Missing type annotation for kwargs
]

# Ativar fixação automática para todas as regras selecionadas
lint.fixable = ["ALL"]
lint.unfixable = []

lint.isort.known-first-party = ["olim"]
lint.isort.section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lint.isort.combine-as-imports = true

lint.pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
include = ["olim"]
exclude = ["**/__pycache__", "migrations"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
reportUnknownMemberType = "none"
reportCallIssue = "none"
reportAttributeAccessIssue = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
# useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv-dev"
